[package]
name = "sel-mint"
version = "0.1.0"
authors = ["Selenian Network"]
edition = "2021"
description = "A Mint contract for Selenian Protocol"
license = ""

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cw20 = { version = "1.0.0" }
cosmwasm-std = { version = "1.1.8" }
cosmwasm-storage = { version = "1.1.8" }
sel-protocol = { version = "0.1.0", path = "../../packages/sel_protocol" }
schemars = { version = "0.8.11" }
serde = { version = "1.0.148" }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.8" }
